# window

./: CMakeLists.txt  LICENSE  copy_data.bat  debug.bat
source/: template.cpp  template.h
source/window/: window.cpp  window.h  window_manager.cpp  window_manager.h
standalone/: CMakeLists.txt
standalone/data/: data.json
standalone/source/: main.cpp
